--- a/goss.yaml
+++ b/goss.yaml
@@ -1,10 +1,8 @@
 file:
-  /goss/docker-entrypoint.sh:
+  ./docker-entrypoint.sh:
     exists: false
-    contains: []
   /usr/share/nginx/html/index.html:
     exists: true
-    contains: [My name is James and I am 28 years old.]
 package:
   nginx:
     installed: true
@@ -22,4 +20,5 @@ http:
     allow-insecure: false
     no-follow-redirects: false
     timeout: 5000
-    body: []
+    body: 
+    - My name is James and I am 28 years old.
